Return only resources on `/subjects/{id}/resources` and topics for `.../topics